fix(internet-header): button alignment in change company dialog (#1010)

--- a/packages/internet-header/src/components/post-klp-login-widget/widget-styles.scss
+++ b/packages/internet-header/src/components/post-klp-login-widget/widget-styles.scss
@@ -524,6 +524,8 @@ li.name-and-surname span.infoHidden {
 .item-centered {
   align-items: center;
   align-self: center;
+  display: flex;
+  justify-content: center;
 }
 
 .item-left {
